--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,8 @@ NEXT RELEASE
 - added hotspot_custom(), hotspot_circle(), hotspot_polygon()
 - added more features to Window.set_visible()
 - added OverviewWindow
+- added row and column trees to summatrix
+- added popup menu to summatrix
 
 
 2007/10/26 - summon-1.8.3
