--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
 SUMMON Change Log
 -----------------
 
-NEXT RELEASE
+2008/01/24 - summon-1.8.4
 - changed default keybinding to be more sensible 
   - left click is hotspot activate
   - left drag is scroll/translate
