updated LGPL license notices

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 SUMMON - A general 2D visualization prototyping module
-Matt Rasmussen
-2007/4/5
+Copyright Matt Rasmussen 2005-2008
+rasmus@mit.edu
 
 - For install instructions see INSTALL
 - For documentation see doc/summon_manual.pdf
