added message_bubble and more doc

--- a/INSTALL
+++ b/INSTALL
@@ -1,6 +1,6 @@
 SUMMON - visualization protyping python module
-Matt Rasmussen
-2007/6/20
+Copyright 2005-2008 Matt Rasmussen 
+
 
 To install SUMMON, do the following:
     1. install thrid-party libraries
