--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 SUMMON - A general 2D visualization prototyping module
-Copyright Matt Rasmussen 2005-2008
+Copyright 2005-2008 Matt Rasmussen 
 rasmus@mit.edu
 
 - For install instructions see INSTALL
