--- a/doc/summon_manual.tex
+++ b/doc/summon_manual.tex
@@ -33,8 +33,6 @@
 \newcommand{\version}{1.8.4}
 
 
-%
-% TODO: add SUMTREE documentation
 % TODO: add development documentation
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -208,12 +206,13 @@ Their example input files are given in \code{summon/examples/summatrix/} and
 
 \subsection{Example script}
 
-For an introduction to the basic commands of SUMMON, let us walk through the
-code of the first example.  To begin, change into the
+For an introduction to the basic API of SUMMON, let us walk through the
+code of the first example.  This example is included in the downloaded
+source code under the \code{summon/examples} directory.  To begin, change into the
 \code{summon/examples/} directory and open up \code{01\_basics.py} in a
 text editor.  Also execute the example with following command.
 
-\codeblock{python 01\_basics.py}
+\codeblock{python -i 01\_basics.py}
 
 The visualization (\figref{fig:01_basics}) should immediately appear in your
 OpenGL window.  See \figref{fig:bindings} for a full list of available 
