minor doc updates

--- a/doc/summon_manual.tex
+++ b/doc/summon_manual.tex
@@ -228,6 +228,9 @@ mouse and key-bindings.
     left mouse button          & activate/click \\
     left mouse button drag     & scroll \\
     right mouse button         & zoom (down: zoom-out, up: zoom-in)\\
+    \\
+    
+    {\bf More ways to scroll \& zoom}     & \\ \hline 
     Ctrl + right mouse button  & zoom x-axis (down: zoom-out, up: zoom-in)\\
     Shift + right mouse button & zoom y-axis (down: zoom-out, up: zoom-in)\\
     arrow keys                 & scroll \\
@@ -238,10 +241,10 @@ mouse and key-bindings.
     Shift + down key           & zoom out (y-axis only) \\
     Shift + right key          & zoom in (x-axis only) \\
     Shift + left key           & zoom out (x-axis only) \\
-    middle click               & display pop-up menu \\
     \\
     
     {\bf Miscellaneous} & \\ \hline
+    middle click               & display pop-up menu \\    
     h                          & home (zoom to make all graphics visible) \\
     Ctrl + h                   & zoom 1:1 (restore zoom to 1:1 for x- and y-axis) \\
     Ctrl + l                   & toggle anti-aliasing \\
