--- a/examples/README
+++ b/examples/README
@@ -1,8 +1,8 @@
 SUMMON Example usage
 
-These examples are provided to introduce the basic features of SUMMON.  They
-have been numbered by their complexity.  For a good tutorial, you can read each
-example and execute it through python.
+These examples introduce the basic features of SUMMON.  They have been numbered
+by increasing complexity.  For a good tutorial, you can read each example and
+execute it through python.
 
 Examples can be executed either directly
 
@@ -15,4 +15,4 @@ Or with python and the interactive flag
 
 The directories summatrix and sumtree contain examples specifically for the
 summatrix and sumtree scripts (located in summon/bin/).  The advance directory
-contains examples of the experimental features of SUMMON.
+contains examples of experimental features in SUMMON.
