--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 SUMMON Change Log
 -----------------
 
+NEXT RELEASE
+- better windows install
+
+
 2008/02/04 - summon-1.8.5
 - bug fixes
 - summatrix toggle label bug fix
