--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
 SUMMON Change Log
 -----------------
 
-NEXT RELEASE
+2009/05/27 - summon-1.8.7
 - speed and memory improvements
   - smaller faster Element data structure
   - simpler thread management
